--- a/app/src/main/res/layout/fragment_employer_home.xml
+++ b/app/src/main/res/layout/fragment_employer_home.xml
@@ -60,15 +60,14 @@
         android:background="@drawable/lavender_border"
         android:closeIcon="@drawable/baseline_close_24"
         android:focusable="false"
-        android:forceHasOverlappingRendering="false"
         android:iconifiedByDefault="false"
         android:queryHint="@string/car_ui_toolbar_default_search_hint"
         android:searchIcon="@drawable/baseline_search_24"
-        android:visibility="visible"
         app:layout_constraintBottom_toTopOf="@+id/guideline4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent"
+        app:searchHintIcon="@null" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/employerJobRecyclerView"
