--- a/app/src/main/res/layout/fragment_edit_profile.xml
+++ b/app/src/main/res/layout/fragment_edit_profile.xml
@@ -249,17 +249,46 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="25dp"
                     android:drawableStart="@drawable/baseline_edit_24"
-                    android:hint="@string/time_prefer">
-
+                    android:hint="From"
+                    >
 
 
                     <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/preferTimeEdit"
-                        android:layout_width="350dp"
+                        android:id="@+id/preferTimeFromEdit"
+                        android:layout_width="145dp"
                         android:layout_height="wrap_content"
-                        android:drawablePadding="16dp"
                         android:drawableStart="@drawable/baseline_access_time_24"
-                        />
+                        android:drawablePadding="16dp" />
+
+
+
+
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="20dp"
+                    android:text="TO"/>
+
+                <com.google.android.material.textfield.TextInputLayout
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="25dp"
+                    android:drawableStart="@drawable/baseline_edit_24"
+                    android:hint="End"
+                    >
+
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/preferTimeEndEdit"
+                        android:layout_width="140dp"
+                        android:layout_height="wrap_content"
+                        android:drawableStart="@drawable/baseline_access_time_24"
+                        android:drawablePadding="16dp" />
+
+
 
 
                 </com.google.android.material.textfield.TextInputLayout>
