--- a/app/src/main/res/layout/fragment_notification_detail2.xml
+++ b/app/src/main/res/layout/fragment_notification_detail2.xml
@@ -61,24 +61,26 @@
     <Button
         android:id="@+id/apply"
         style="?attr/materialButtonOutlinedStyle"
-        android:layout_width="95dp"
+        android:layout_width="120dp"
         android:layout_height="50dp"
         android:layout_marginTop="70dp"
-        android:layout_marginStart="80dp"
+        android:layout_marginStart="60dp"
         android:text="@string/apply"
         android:textColor="@color/green"
-
+        android:drawableLeft="@drawable/baseline_check_24"
         />
 
     <Button
         android:id="@+id/reject"
         style="?attr/materialButtonOutlinedStyle"
-        android:layout_width="95dp"
+        android:layout_width="120dp"
         android:layout_height="50dp"
         android:layout_marginTop="-50dp"
-        android:layout_marginStart="250dp"
+        android:layout_marginStart="230dp"
         android:text="@string/reject"
-        android:textColor="@color/red" />
+        android:textColor="@color/red"
+        android:drawableLeft="@drawable/baseline_close_24"
+        />
 
 
 </LinearLayout>
