--- a/app/src/main/res/layout/fragment_notification.xml
+++ b/app/src/main/res/layout/fragment_notification.xml
@@ -1,57 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.notifications.NotificationFragment">
+    <ScrollView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
 
-    <androidx.appcompat.widget.SearchView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginEnd="12dp"
-        android:id="@+id/search"
-        app:iconifiedByDefault="false"
-        app:searchHintIcon="@null"
-        app:queryHint="Search..."
-        android:focusable="false"
-        app:closeIcon="@drawable/baseline_close_24"
-        app:searchIcon="@drawable/baseline_search_24"
-        android:background="@drawable/lavender_border"/>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <androidx.appcompat.widget.SearchView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_marginStart="12dp"
+                android:layout_marginEnd="12dp"
+                android:id="@+id/search"
+                app:iconifiedByDefault="false"
+                app:searchHintIcon="@null"
+                app:queryHint="Search..."
+                android:focusable="false"
+                app:closeIcon="@drawable/baseline_close_24"
+                app:searchIcon="@drawable/baseline_search_24"
+                android:background="@drawable/lavender_border"/>
 
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/recycleViewNotification"
-        android:scrollbars="vertical"
-        android:layout_marginTop="10dp"
-        android:layout_below="@id/search"
-        />
+            <androidx.recyclerview.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/recycleViewNotification"
+                android:scrollbars="vertical"
+                android:layout_marginTop="10dp"
+                android:layout_below="@id/search"
+                />
 
-    <Button
-        android:id="@+id/test"
-        style="?attr/materialButtonOutlinedStyle"
-        android:layout_width="95dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="500dp"
-        android:layout_marginStart="80dp"
-        android:text="@string/apply"
-        android:textColor="@color/green"
+            <!--    <Button-->
+            <!--        android:id="@+id/test"-->
+            <!--        style="?attr/materialButtonOutlinedStyle"-->
+            <!--        android:layout_width="95dp"-->
+            <!--        android:layout_height="50dp"-->
+            <!--        android:layout_marginTop="500dp"-->
+            <!--        android:layout_marginStart="80dp"-->
+            <!--        android:text="@string/apply"-->
+            <!--        android:textColor="@color/green"-->
 
-        />
+            <!--        />-->
 
-<!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:id="@+id/fab"-->
-<!--        android:backgroundTint="@color/lavender"-->
-<!--        android:src="@drawable/baseline_add_24"-->
-<!--        android:tint="@color/white"-->
-<!--        android:layout_alignParentBottom="true"-->
-<!--        android:layout_alignParentEnd="true"-->
-<!--        android:layout_margin="40dp"/>-->
 
-</RelativeLayout>
+
+        </RelativeLayout>
+    </ScrollView>
+
+
+
+
+</layout>
