--- a/app/src/main/res/layout/fragment_notification_organization.xml
+++ b/app/src/main/res/layout/fragment_notification_organization.xml
@@ -1,36 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.notifications.organization.NotificationOrganizationFragment">
 
+    <ScrollView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <androidx.appcompat.widget.SearchView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_marginStart="12dp"
+                android:layout_marginEnd="12dp"
+                android:id="@+id/search"
+                app:iconifiedByDefault="false"
+                app:searchHintIcon="@null"
+                app:queryHint="Search..."
+                android:focusable="false"
+                app:closeIcon="@drawable/baseline_close_24"
+                app:searchIcon="@drawable/baseline_search_24"
+                android:background="@drawable/lavender_border"/>
 
 
-    <androidx.appcompat.widget.SearchView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginEnd="12dp"
-        android:id="@+id/search"
-        app:iconifiedByDefault="false"
-        app:searchHintIcon="@null"
-        app:queryHint="Search..."
-        android:focusable="false"
-        app:closeIcon="@drawable/baseline_close_24"
-        app:searchIcon="@drawable/baseline_search_24"
-        android:background="@drawable/lavender_border"/>
+            <androidx.recyclerview.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/recycleViewNotification"
+                android:scrollbars="vertical"
+                android:layout_marginTop="10dp"
+                android:layout_below="@id/search"
+                />
 
+        </RelativeLayout>
+    </ScrollView>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/recycleViewNotification"
-        android:scrollbars="vertical"
-        android:layout_marginTop="10dp"
-        android:layout_below="@id/search"
-        />
-
-</RelativeLayout>
+</layout>
