--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -12,6 +12,18 @@
             android:layout_height="wrap_content"
             tools:context=".ui.Profile.ProfileFragment">
 
+            <ImageView
+                android:id="@+id/coverPic"
+                android:layout_width="412dp"
+                android:layout_height="130dp"
+                android:scaleType="centerCrop"
+                android:visibility="visible"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/mirror" />
+
 
             <LinearLayout
                 android:id="@+id/layoutPhoto"
@@ -19,6 +31,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
                 android:layout_marginStart="10dp"
+
                 >
 
                 <androidx.cardview.widget.CardView
