--- a/app/src/main/res/layout/fragment_profile_organization.xml
+++ b/app/src/main/res/layout/fragment_profile_organization.xml
@@ -12,6 +12,18 @@
             android:layout_height="wrap_content"
             tools:context="ui.Profile.organization.ProfileOrganizationFragment">
 
+            <ImageView
+                android:id="@+id/coverPic"
+                android:layout_width="412dp"
+                android:layout_height="130dp"
+                android:scaleType="centerCrop"
+                android:visibility="visible"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/worker" />
+
             <LinearLayout
                 android:id="@+id/layoutPhoto"
                 android:layout_width="wrap_content"
