--- a/app/src/main/res/layout/fragment_notification_detail.xml
+++ b/app/src/main/res/layout/fragment_notification_detail.xml
@@ -18,6 +18,16 @@
         android:scaleType="fitCenter"
         android:src="@drawable/baseline_arrow_back_24" />
 
+    <ImageButton
+        android:id="@+id/delete"
+        android:layout_width="40dp"
+        android:layout_height="35dp"
+        android:layout_marginStart="360dp"
+        android:layout_marginTop="-35dp"
+        android:background="#0000FFFF"
+        android:scaleType="fitCenter"
+        android:src="@drawable/baseline_delete_24" />
+
     <TextView
         android:id="@+id/detailTitle"
         android:layout_width="wrap_content"
